Fixes bug #74708 reflection signatures for random_bytes+random_int

They have 1 and 2 required parameters, respectively
See https://secure.php.net/manual/en/function.random-int.php